throw baby blue in there

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -40,7 +40,7 @@
   <div class="mt-8 flex justify-end">
     <button
       type="submit"
-      class="bg-theme_button text-theme_text_light hover:bg-theme_button_hover px-4 py-2 rounded-lg hover:cursor-pointer"
+      class="bg-theme_accents text-theme_text_dark hover:bg-theme_button_hover px-4 py-2 rounded-lg hover:cursor-pointer"
       >Send message</button
     >
   </div>
