--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const year = new Date().getFullYear();
       <div class="flex gap-x-6 md:order-2">
         <!-- <SocialMediaIcons /> -->
       </div>
-      <p class="text-sm/6 text-gray-600 ml-4">
+      <p class="text-sm/6 text-theme_accents ml-4">
         &copy; {year}
         {content.company.name}. All rights reserved.
       </p>
