--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -12,7 +12,7 @@ const email = content.company.email;
 <Layout pageTitle="About">
   <section class="flex-1">
     <!-- Content container -->
-    <div class="p-8 text-theme_text_dark lg:flex gap-12">
+    <div class="p-8 text-theme_text_light lg:flex gap-12">
       <!-- Left container -->
       <div class="max-w-xl flex-1 px-4 py-6 lg:px-12 lg:py-14">
         <h1 class="text-4xl lg:text-7xl">Send us a message</h1>
