--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,11 @@ import ContactForm from "~/components/ContactForm.astro";
       <!-- Hero content -->
       <div class="mb-12">
         <h1 class="text-4xl lg:text-7xl my-6 lg:my-12">
-          {content.pages[0].hero}
+          You serve your customers! <span
+            class="text-theme_accents border-b border-theme_accents"
+          >
+            We bring them to you.</span
+          >
         </h1>
         <h2>
           {content.pages[0].subHero}
