--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -9,7 +9,7 @@ import { Image } from "astro:assets";
 <Layout pageTitle="About">
   <section class="flex-1">
     <!-- Content container -->
-    <div class="p-8 text-theme_text_dark lg:flex gap-12">
+    <div class="p-8 text-theme_text_light lg:flex gap-12">
       <div class="max-w-xl">
         <h1 class="mb-8 text-4xl lg:text-7xl">About Us</h1>
         {
