--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,23 +1,28 @@
 ---
-import Footer from "~/components/Footer.astro";
-import "../styles/global.css";
 import Header from "~/components/Header.astro";
+import Footer from "~/components/Footer.astro";
+
 const { pageTitle } = Astro.props;
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" href="/favicon.ico" />
     <title>{pageTitle}</title>
   </head>
-  <body class="min-h-screen flex flex-col text-theme_text_light">
+
+  <body
+    class="min-h-screen flex flex-col bg-theme_content_bg text-theme_text_light antialiased"
+  >
     <Header />
-    <main class="flex-1 flex flex-col bg-theme_content_bg">
+
+    <main class="flex-1 flex flex-col">
       <slot />
     </main>
+
     <Footer />
   </body>
 </html>
