--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -7,7 +7,7 @@ import { content } from "~/data/content";
 <Layout pageTitle="About">
   <section class="flex-1">
     <!-- Content container -->
-    <div class="p-8 text-theme_text_light w-max">
+    <div class="p-6 sm:p-8 text-theme_text_light w-full max-w-3xl mx-auto">
       <h1 class="mb-8 text-4xl lg:text-7xl">Our Services</h1>
       <ul class="text-lg flex flex-col gap-4">
         {
