--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -61,7 +61,9 @@ const { address, phone, email } = content.company;
 
         <!-- Form -->
         <div class="w-full">
-          <div class="rounded-2xl bg-white p-8 shadow-2xl text-theme_text_dark">
+          <div
+            class="rounded-2xl p-8 shadow-2x bg-gray-200 text-theme_text_dark"
+          >
             <ContactForm />
           </div>
         </div>
