--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import ContactForm from "~/components/ContactForm.astro";
 
         <!-- Form -->
         <div
-          class="w-full max-w-md rounded-2xl bg-white p-6 shadow-2xl
+          class="w-full max-w-md rounded-2xl bg-gray-200 p-6 shadow-2xl
          text-theme_text_dark text-left
          mx-4 sm:mx-auto"
         >
