--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { content } from "~/data/content.ts";
-import { MobileMenu } from "~/components/MobileMenu";
+import MobileMenu from "~/components/MobileMenu.astro";
 
 const pathname = Astro.url.pathname;
 const basePath = import.meta.env.BASE_URL.replace(/\/$/, "");
@@ -49,7 +49,7 @@ const cleanPathname = pathname.replace(basePath, "") || "/";
 
     <!-- Mobile Nav -->
     <nav class="lg:hidden">
-      <MobileMenu client:load pages={content.pages} pathname={pathname} />
+      <MobileMenu pages={content.pages} pathname={pathname} />
     </nav>
   </div>
 </header>
