--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -14,11 +14,21 @@ import { Image } from "astro:assets";
           <h1 class="mb-8 text-4xl font-extrabold lg:text-7xl">About Us</h1>
 
           <div class="space-y-6 text-lg leading-relaxed text-gray-200">
-            {
-              content.pages[1].aboutContent
-                ?.split(/\n\s*\n/)
-                .map((paragraph) => <p>{paragraph}</p>)
-            }
+            TradeBuilt Web builds simple, effective websites for the folks who
+            keep our towns running:
+            <br />
+            <br />
+            <ul class="">
+              <li>- contractors</li>
+              <li>- handymen</li>
+              <li>- restaurant owners</li>
+              <li>- hair stylists</li>
+              <li>- mechanics</li>
+            </ul>
+
+            <br />
+            We focus on clarity, speed, and tap‑to‑call design so your phone rings
+            more.
           </div>
         </div>
 
