--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -15,13 +15,14 @@ const { address, phone, email } = content.company;
           <h1 class="text-4xl font-extrabold lg:text-7xl">Send us a message</h1>
 
           <p class="mt-6 max-w-md text-lg text-gray-300">
-            We'd love to hear from you. Fill out the form and we’ll get back to
-            you shortly.
+            Fill out our contact form and be online <span class="font-bold"
+              >tomorrow!</span
+            >
           </p>
 
           <!-- Contact details -->
           <dl class="mt-12 space-y-6 text-gray-200">
-            <!-- Address -->
+            Address
             <div class="flex gap-4">
               <dt class="mt-1 text-theme_accents">📍</dt>
               <dd>
