--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -11,7 +11,7 @@ import { content } from "~/data/content";
       <h1 class="mb-8 text-4xl lg:text-7xl">Our Services</h1>
       <ul class="text-lg flex flex-col gap-4">
         <li>
-          <span class="font-bold">Check out an example page: </span><a
+          <span class="font-bold">Live client domains: </span><a
             href="https://waldvogelshandyman.com"
             class="underline text-theme_accents"
             target="_blank"
