--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -22,7 +22,7 @@ const { address, phone, email } = content.company;
 
           <!-- Contact details -->
           <dl class="mt-12 space-y-6 text-gray-200">
-            Address
+            <!-- Address -->
             <div class="flex gap-4">
               <dt class="mt-1 text-theme_accents">📍</dt>
               <dd>
