--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -19,11 +19,11 @@ import { Image } from "astro:assets";
             <br />
             <br />
             <ul class="">
-              <li>- contractors</li>
-              <li>- handymen</li>
-              <li>- restaurant owners</li>
-              <li>- hair stylists</li>
-              <li>- mechanics</li>
+              <li>- Contractors</li>
+              <li>- Handymen</li>
+              <li>- Restaurant owners</li>
+              <li>- Hair stylists</li>
+              <li>- Mechanics</li>
             </ul>
 
             <br />
