--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -15,8 +15,8 @@ const { address, phone, email } = content.company;
           <h1 class="text-4xl font-extrabold lg:text-7xl">Send us a message</h1>
 
           <p class="mt-6 max-w-md text-lg text-gray-300">
-            Fill out our contact form and be online <span class="font-bold"
-              >tomorrow!</span
+            Fill out our contact form. Be online <span class="font-bold"
+              >tomorrow.</span
             >
           </p>
 
