--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import ContactForm from "~/components/ContactForm.astro";
           <h1 class="text-4xl font-extrabold leading-tight lg:text-7xl">
             You serve your customers.
             <span
-              class="block mt-2 text-theme_accents underline decoration-theme_accents/60 decoration-4 underline-offset-8"
+              class="block mt-2 text-theme_accents italic decoration-theme_accents/60 decoration-4 underline-offset-8"
             >
               We bring them to you.
             </span>
