--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const cleanPathname = pathname.replace(basePath, "") || "/";
     <!-- Logo -->
     <a
       href={import.meta.env.BASE_URL}
-      class="text-2xl font-extrabold tracking-tight lg:text-4xl"
+      class="text-2xl font-extrabold text-theme_accents tracking-tight lg:text-4xl"
     >
       {content.company.name}
     </a>
