--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -26,9 +26,9 @@ const { address, phone, email } = content.company;
             <div class="flex gap-4">
               <dt class="mt-1 text-theme_accents">📍</dt>
               <dd>
-                {address.street}<br />
+                <!-- {address.street}<br /> -->
                 {address.city}, {address.state}
-                {address.zip}
+                <!-- {address.zip} -->
               </dd>
             </div>
 
