change mobile menu button color

--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -12,7 +12,7 @@ const cleanPathname = pathname.replace(basePath, "") || "/";
   <button
     aria-label="Open Menu"
     data-menu-trigger
-    class="bg-theme_text_light rounded p-1"
+    class="bg-theme_accents rounded p-1"
   >
     <img
       src={MenuIcon.src ?? MenuIcon}
