change menu color

--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -23,7 +23,7 @@ const cleanPathname = pathname.replace(basePath, "") || "/";
   </button>
   <div
     data-dropdown-content
-    class="dropdown-content hidden absolute right-0 mt-2 w-48 bg-theme_text_light border border-theme_accents rounded-md shadow-lg z-50"
+    class="dropdown-content hidden absolute right-0 mt-2 w-48 bg-theme_accents border border-theme_accents rounded-md shadow-lg z-50"
   >
     <ul class="flex flex-col gap-1 p-2">
       {
